tests/lean/vm_sorry.lean.expected.out
vm_sorry.lean:1:4: warning: declaration 'half_baked' uses sorry
42
vm_sorry.lean:6:0: error: half_baked._main._val_1: trying to evaluate sorry
vm_sorry.lean:12:0: error: undefined
(some nat)
